--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -2,8 +2,10 @@
     color: rgb(51, 65, 72);
     font-family: Helvetica;
 }
+
 .label {
     display: inline-block;
+    font-size: 20px;
     margin-bottom: 10px;
     margin-right: 30px;
     width: 200px;
