added global stylesheet

--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -30,6 +30,7 @@
     border: 2px solid rgb(51, 65, 72);
     border-radius: 16px;
     color: white;
+    font-size: 20px;
     margin-top: 30px;
     margin-bottom: 10px;
     width: 430px;
