--- a/src/styles/adminUsers.module.css
+++ b/src/styles/adminUsers.module.css
@@ -2,17 +2,22 @@
     text-align: center;
 }
 
+.left {
+    text-align: left;
+}
+
 .warning {
     color: red;
 }
 
-table {
+.table {
     border-collapse: collapse;
     margin-left: auto;
     margin-right: auto;
+    width: 600px;
 }
 
-th {
+.th {
     border-bottom: 1px solid rgb(51, 65, 72);
     margin-bottom: 100px;
 }
