--- a/src/styles/form.module.css
+++ b/src/styles/form.module.css
@@ -1,8 +1,3 @@
-.h1, .label, .input {
-    color: rgb(51, 65, 72);
-    font-family: Helvetica;
-}
-
 .label {
     display: inline-block;
     font-size: 20px;
@@ -80,5 +75,9 @@
 
 .warning {
     color: red;
-    font-family: Helvetica;
+    line-height: 1.5;
+}
+
+.height {
+    height: 5px;
 }
