--- a/src/styles/ShowContentPage.module.css
+++ b/src/styles/ShowContentPage.module.css
@@ -4,9 +4,15 @@
 
 .relatedContainer {
     width: 25vw;
-    border: solid 2px black;
+    border: solid 2px rgb(0,0,0);
+    margin: 0;
+    color: red;
 }
 
 .pdfViewer {
     margin: 0 5vw;
+}
+
+.destroy {
+    display: none;
 }
