styling to home and show pages and fixes to data sent in file upload form

--- a/src/styles/ShowContentPage.module.css
+++ b/src/styles/ShowContentPage.module.css
@@ -9,6 +9,14 @@
     color: red;
 }
 
+.relatedContainer > section {
+    margin: 0;
+}
+
+.hideContent {
+    display: none;
+}
+
 .pdfViewer {
     margin: 0 5vw;
 }
