--- a/src/styles/blurb.module.css
+++ b/src/styles/blurb.module.css
@@ -2,12 +2,6 @@
     max-width: 400px;
 }
 
-.h1 {
-    color: rgb(51, 65, 72);
-    font-family: Helvetica;
-}
-
-.p {
-    font-size: 20px;
-    line-height: 1.5;
+.h1, .p {
+    color: rgb(0, 174, 239)
 }
