--- a/src/styles/HomePage.module.css
+++ b/src/styles/HomePage.module.css
@@ -1,5 +1,5 @@
 .title {
-    padding: 1em 0.5em;
+    padding: 0 0.5em;
     margin: 0 15vw;
 }
 
@@ -15,11 +15,17 @@
 
 .homeContainer {
     width: 100%;
+    display: flex;
+    overflow: scroll;
+}
+
+.homeContainer > section {
+    min-width: 90%;
+    margin: 5rem 5%;
 }
 
 .homeContainer > div {
     display: flex;
-    overflow: scroll;
 }
 
 .homeContainer > h3 {
@@ -36,3 +42,12 @@
 .solution .h1, .p1 {
     color: rgb(0, 174, 239);
 } 
+
+.blueLine {
+    width: 100px;
+    height: 3px;
+    background-color: #06b3f3;
+    display: block;
+    margin-bottom: 2rem;
+    margin-left: 15vw;
+}
